--- a/3-treasure-chaining/index.html
+++ b/3-treasure-chaining/index.html
@@ -102,8 +102,8 @@
         const suffledArrayItem = shuffle(amount);
         const suffledLootType = shuffle(lootType);
         return {
-          amount: amount[0],
-          lootType: lootType[0]
+          amount: suffledArrayItem[0],
+          lootType: suffledLootType[0]
         }
       };
 
