--- a/5-treasure-chest-class-syntax/index.html
+++ b/5-treasure-chest-class-syntax/index.html
@@ -62,7 +62,7 @@
          * @param  {Array} array The array to shuffle
          * @return {Array}       The shuffled array
          */
-        shuffle = function (array) {
+        static shuffle = function (array) {
           let currentIndex = array.length;
           let temporaryValue, randomIndex;
 
