--- a/notes/classes-free-code-camp/index.html
+++ b/notes/classes-free-code-camp/index.html
@@ -42,9 +42,9 @@
           this.width = Math.sqrt(area); // e.g. 5 for 25
           this.height = this.width;
         }
-        // set color(color) {
-        //   this.color = color;
-        // }
+        set color(color) {
+          this.color = color;
+        }
       }
 
       let square1 = new Square(50, 'purple');
