--- a/8-dice-custom-component/index.html
+++ b/8-dice-custom-component/index.html
@@ -18,7 +18,7 @@
 
     <roll-dice></roll-dice>
     <roll-dice>Roll a D6</roll-dice>
-    <roll-dice die>Roll a D6</roll-dice>
+    <roll-dice die-image sides="12">Roll a D12</roll-dice>
 
     <script>
       class RollDice extends HTMLElement {
@@ -26,17 +26,86 @@
           super();
           let btnText = this.innerHTML.trim();
           this.innerHTML = `<p>
-      	  <button>${this.hasAttribute("die") ? "🎲" : ""} ${
+            	  <button>${this.hasAttribute("die-image") ? "🎲" : ""} ${
             btnText ? btnText : "Roll Em"
           }</button>
-          </p>
-          <div class="message" aria-live="polite"></div>`;
+                </p>
+                <div class="message" aria-live="polite"></div>`;
         }
         /**
          * Runs each time the element is appended to or moved in the DOM
          */
         connectedCallback() {
           console.log("connected!", this);
+          // Attach a click event listener to the button
+          let btn = this.querySelector("button");
+          if (!btn) return;
+
+          btn.addEventListener("click", this.#clickHandler);
+        }
+
+        // #getSides() {
+        //   let sides = host.getAttribute("sides");
+        //   console.log.apply(console, sides);
+        // }
+
+        #clickHandler(event) {
+          // Get the host component
+          let host = event.target.closest("roll-dice");
+
+          // Get the message element
+          let target = host.querySelector(".message");
+          if (!target) return;
+
+          let sides = host.getAttribute("sides");
+          if (!sides) {
+            sides = 6;
+          }
+
+          let roll = host.#rollDie(sides);
+
+          // Inject the message into the UI;
+          target.textContent = `You rolled ${roll} on a ${sides}-sided die`;
+
+          setTimeout(function () {
+            target.textContent = "";
+          }, 5000);
+        }
+
+        #rollDie(sides) {
+          let dieArray = this.#createDie(sides);
+          let result = this.#shuffle(dieArray);
+          return result[0];
+        }
+
+        #createDie(sides) {
+          if (sides % 2 !== 0) {
+            throw new Error("Please enter an even number of sides.");
+          }
+          let die = [];
+          for (let i = 1; i <= sides; i++) {
+            die.push(i);
+          }
+          return die;
+        }
+
+        #shuffle(array) {
+          let currentIndex = array.length;
+          let temporaryValue, randomIndex;
+
+          // While there remain elements to shuffle...
+          while (0 !== currentIndex) {
+            // Pick a remaining element...
+            randomIndex = Math.floor(Math.random() * currentIndex);
+            currentIndex -= 1;
+
+            // And swap it with the current element.
+            temporaryValue = array[currentIndex];
+            array[currentIndex] = array[randomIndex];
+            array[randomIndex] = temporaryValue;
+          }
+
+          return array;
         }
 
         /**
@@ -44,6 +113,10 @@
          */
         disconnectedCallback() {
           console.log("disconnected", this);
+          // Remove the click event listener from the button
+          let btn = this.querySelector("button");
+          if (!btn) return;
+          btn.removeEventListener("click", this.#clickHandler);
         }
       }
 
